--- a/Recursos Humanos/Recursos Humanos/Recursos Humanos.csproj
+++ b/Recursos Humanos/Recursos Humanos/Recursos Humanos.csproj
@@ -45,6 +45,7 @@
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
+    <Reference Include="System.Windows.Forms.DataVisualization" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -65,6 +66,12 @@
     </Compile>
     <Compile Include="Frm_nominas.Designer.cs">
       <DependentUpon>Frm_nominas.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Frm_ResultadoBT.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Frm_ResultadoBT.Designer.cs">
+      <DependentUpon>Frm_ResultadoBT.cs</DependentUpon>
     </Compile>
     <Compile Include="Mantenimientos\Frm_mantAreas.cs">
       <SubType>Form</SubType>
@@ -115,6 +122,11 @@
       <DependentUpon>MDI_RRHH.cs</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Frm_capacitaciones.resx">
@@ -122,6 +134,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Frm_nominas.resx">
       <DependentUpon>Frm_nominas.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Frm_ResultadoBT.resx">
+      <DependentUpon>Frm_ResultadoBT.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Mantenimientos\Frm_mantAreas.resx">
       <DependentUpon>Frm_mantAreas.cs</DependentUpon>
@@ -147,6 +162,16 @@
     <EmbeddedResource Include="MDI_RRHH.resx">
       <DependentUpon>MDI_RRHH.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\icons8-minimizar-la-ventana-35.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\icons8-cerrar-ventana-35.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
