Grafica de Asistencias

--- a/Recursos Humanos/Recursos Humanos/Recursos Humanos.csproj
+++ b/Recursos Humanos/Recursos Humanos/Recursos Humanos.csproj
@@ -61,6 +61,12 @@
     <Compile Include="Frm_capacitaciones.Designer.cs">
       <DependentUpon>Frm_capacitaciones.cs</DependentUpon>
     </Compile>
+    <Compile Include="Frm_ControlAsistencias.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Frm_ControlAsistencias.Designer.cs">
+      <DependentUpon>Frm_ControlAsistencias.cs</DependentUpon>
+    </Compile>
     <Compile Include="Frm_DesempeñoEmpleado.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -140,6 +146,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Frm_capacitaciones.resx">
       <DependentUpon>Frm_capacitaciones.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Frm_ControlAsistencias.resx">
+      <DependentUpon>Frm_ControlAsistencias.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Frm_DesempeñoEmpleado.resx">
       <DependentUpon>Frm_DesempeñoEmpleado.cs</DependentUpon>
