--- a/Recursos Humanos/Recursos Humanos/Recursos Humanos.csproj
+++ b/Recursos Humanos/Recursos Humanos/Recursos Humanos.csproj
@@ -73,6 +73,12 @@
     <Compile Include="Consultas\Frm_consultaPerfil.Designer.cs">
       <DependentUpon>Frm_consultaPerfil.cs</DependentUpon>
     </Compile>
+    <Compile Include="Consultas\Frm_consultaReporteVacante.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Consultas\Frm_consultaReporteVacante.Designer.cs">
+      <DependentUpon>Frm_consultaReporteVacante.cs</DependentUpon>
+    </Compile>
     <Compile Include="Frm_capacitaciones.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -177,6 +183,9 @@
     <EmbeddedResource Include="Consultas\Frm_consultaPerfil.resx">
       <DependentUpon>Frm_consultaPerfil.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Consultas\Frm_consultaReporteVacante.resx">
+      <DependentUpon>Frm_consultaReporteVacante.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Frm_capacitaciones.resx">
       <DependentUpon>Frm_capacitaciones.cs</DependentUpon>
     </EmbeddedResource>
@@ -230,6 +239,8 @@
   <ItemGroup>
     <None Include="Resources\icons8-cerrar-ventana-35.png" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <None Include="Resources\lupa.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
