--- a/Recursos Humanos/Recursos Humanos/Recursos Humanos.csproj
+++ b/Recursos Humanos/Recursos Humanos/Recursos Humanos.csproj
@@ -73,6 +73,12 @@
     <Compile Include="Consultas\Frm_consultaPerfil.Designer.cs">
       <DependentUpon>Frm_consultaPerfil.cs</DependentUpon>
     </Compile>
+    <Compile Include="Consultas\Frm_consultaReporteVacante.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Consultas\Frm_consultaReporteVacante.Designer.cs">
+      <DependentUpon>Frm_consultaReporteVacante.cs</DependentUpon>
+    </Compile>
     <Compile Include="Frm_capacitaciones.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -121,6 +127,12 @@
     <Compile Include="Mantenimientos\Frm_mantConceptos.Designer.cs">
       <DependentUpon>Frm_mantConceptos.cs</DependentUpon>
     </Compile>
+    <Compile Include="Mantenimientos\Frm_mantCurriculum.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Mantenimientos\Frm_mantCurriculum.Designer.cs">
+      <DependentUpon>Frm_mantCurriculum.cs</DependentUpon>
+    </Compile>
     <Compile Include="Mantenimientos\Frm_mantDepartamento.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -132,6 +144,18 @@
     </Compile>
     <Compile Include="Mantenimientos\Frm_mantEmpleado.Designer.cs">
       <DependentUpon>Frm_mantEmpleado.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Mantenimientos\Frm_mantMedios_Comunicacion.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Mantenimientos\Frm_mantMedios_Comunicacion.Designer.cs">
+      <DependentUpon>Frm_mantMedios_Comunicacion.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Mantenimientos\Frm_mantPerfil_Profesional.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Mantenimientos\Frm_mantPerfil_Profesional.Designer.cs">
+      <DependentUpon>Frm_mantPerfil_Profesional.cs</DependentUpon>
     </Compile>
     <Compile Include="Mantenimientos\Frm_mantPruebas.cs">
       <SubType>Form</SubType>
@@ -177,6 +201,9 @@
     <EmbeddedResource Include="Consultas\Frm_consultaPerfil.resx">
       <DependentUpon>Frm_consultaPerfil.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Consultas\Frm_consultaReporteVacante.resx">
+      <DependentUpon>Frm_consultaReporteVacante.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Frm_capacitaciones.resx">
       <DependentUpon>Frm_capacitaciones.cs</DependentUpon>
     </EmbeddedResource>
@@ -201,11 +228,20 @@
     <EmbeddedResource Include="Mantenimientos\Frm_mantConceptos.resx">
       <DependentUpon>Frm_mantConceptos.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Mantenimientos\Frm_mantCurriculum.resx">
+      <DependentUpon>Frm_mantCurriculum.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Mantenimientos\Frm_mantDepartamento.resx">
       <DependentUpon>Frm_mantDepartamento.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Mantenimientos\Frm_mantEmpleado.resx">
       <DependentUpon>Frm_mantEmpleado.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Mantenimientos\Frm_mantMedios_Comunicacion.resx">
+      <DependentUpon>Frm_mantMedios_Comunicacion.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Mantenimientos\Frm_mantPerfil_Profesional.resx">
+      <DependentUpon>Frm_mantPerfil_Profesional.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Mantenimientos\Frm_mantPruebas.resx">
       <DependentUpon>Frm_mantPruebas.cs</DependentUpon>
@@ -230,6 +266,8 @@
   <ItemGroup>
     <None Include="Resources\icons8-cerrar-ventana-35.png" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <None Include="Resources\lupa.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
