Proceso de Preseleccion de empleados

--- a/Recursos Humanos/Recursos Humanos/Recursos Humanos.csproj
+++ b/Recursos Humanos/Recursos Humanos/Recursos Humanos.csproj
@@ -97,11 +97,23 @@
     <Compile Include="Frm_DesempeñoEmpleado.Designer.cs">
       <DependentUpon>Frm_DesempeñoEmpleado.cs</DependentUpon>
     </Compile>
+    <Compile Include="Frm_filtroPreSeleccion.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Frm_filtroPreSeleccion.Designer.cs">
+      <DependentUpon>Frm_filtroPreSeleccion.cs</DependentUpon>
+    </Compile>
     <Compile Include="Frm_nominas.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Frm_nominas.Designer.cs">
       <DependentUpon>Frm_nominas.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Frm_preSeleccion.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Frm_preSeleccion.Designer.cs">
+      <DependentUpon>Frm_preSeleccion.cs</DependentUpon>
     </Compile>
     <Compile Include="Frm_ResultadoBT.cs">
       <SubType>Form</SubType>
@@ -213,8 +225,14 @@
     <EmbeddedResource Include="Frm_DesempeñoEmpleado.resx">
       <DependentUpon>Frm_DesempeñoEmpleado.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Frm_filtroPreSeleccion.resx">
+      <DependentUpon>Frm_filtroPreSeleccion.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Frm_nominas.resx">
       <DependentUpon>Frm_nominas.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Frm_preSeleccion.resx">
+      <DependentUpon>Frm_preSeleccion.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Frm_ResultadoBT.resx">
       <DependentUpon>Frm_ResultadoBT.cs</DependentUpon>
@@ -268,6 +286,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\lupa.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\icons8-guardar-50.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
