Se incluyeron los documentos de ayudas del modulo de Recursos Humanos

--- a/Recursos Humanos/Recursos Humanos/Recursos Humanos.csproj
+++ b/Recursos Humanos/Recursos Humanos/Recursos Humanos.csproj
@@ -103,6 +103,12 @@
     <Compile Include="Frm_capacitaciones.Designer.cs">
       <DependentUpon>Frm_capacitaciones.cs</DependentUpon>
     </Compile>
+    <Compile Include="Frm_ConceptoEmpleado.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Frm_ConceptoEmpleado.Designer.cs">
+      <DependentUpon>Frm_ConceptoEmpleado.cs</DependentUpon>
+    </Compile>
     <Compile Include="Frm_ControlAsistencias.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -251,6 +257,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Frm_capacitaciones.resx">
       <DependentUpon>Frm_capacitaciones.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Frm_ConceptoEmpleado.resx">
+      <DependentUpon>Frm_ConceptoEmpleado.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Frm_ControlAsistencias.resx">
       <DependentUpon>Frm_ControlAsistencias.cs</DependentUpon>
